// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Block adds the bgSuccess modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background-color: #13CE66;
}

.c0:hover,
.c0:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c1 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c2 {
  font-size: 1rem;
}

<button
  className="c0"
>
  <span
    className="c1"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c2"
  />
</button>
`;

exports[`Button Block adds the fullWidth modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover,
.c0:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c1 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c2 {
  font-size: 1rem;
}

<button
  className="c0"
>
  <span
    className="c1"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c2"
  />
</button>
`;

exports[`Button Block adds the hoverBgSuccess modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c0:hover,
.c0:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c0:hover,
.c0:focus {
  background-color: #15e572;
}

.c1 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c2 {
  font-size: 1rem;
}

<button
  className="c0"
>
  <span
    className="c1"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c2"
  />
</button>
`;

exports[`Button Block renders correctly 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c0:hover,
.c0:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c1 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c2 {
  font-size: 1rem;
}

<button
  className="c0"
>
  <span
    className="c1"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c2"
  />
</button>
`;
